--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.24.0",
     "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
+    "dotenv-webpack": "^7.1.0",
     "express": "^4.18.1",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.1",
