--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_ENDPOINT=https://music-rating-app-backend.herokuapp.com/api
-VUE_APP_LOGIN_ENDPOINT=https://music-rating-app-backend.herokuapp.com/api/auth
+VUE_APP_API_ENDPOINT=http://www.music-rating-app.xyz/api
+VUE_APP_LOGIN_ENDPOINT=http://www.music-rating-app.xyz/api/auth
