--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueform/slider": "^2.0.9",
     "axios": "^0.24.0",
     "chart.js": "^3.7.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.18.1",
